correcting spacing for mobile when user is viewing film details and rating a post

--- a/client/src/ShowDetailsOfSuggestedFilm.css
+++ b/client/src/ShowDetailsOfSuggestedFilm.css
@@ -168,6 +168,10 @@ h1 {
 }
 
 @media screen and (width <= 768px) {
+  .br {
+    display: none;
+  }
+
   .imageDetails {
     width: 280px;
     height: 400px;
